--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "dart-sass": "^1.25.0",
     "live-server": "^1.2.2",
-    "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "sass-math": "^1.0.0",
     "style-loader": "^3.3.2",
     "validator": "^13.9.0",
     "webpack": "^5.77.0",
